--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "axios": "^0.27.2",
         "form-data": "^4.0.0",
         "inquirer": "^8.2.4",
-        "mysql": "^2.18.1"
+        "mysql2": "^2.3.3"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.18.2",
