--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "migrate"
     ],
     "dependencies": {
+        "arg": "^5.0.2",
         "auth0": "^2.42.0",
         "axios": "^0.27.2",
         "form-data": "^4.0.0",
