--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "arg": "^5.0.2",
         "auth0": "^2.42.0",
         "axios": "^0.27.2",
+        "chalk": "^5.0.1",
         "form-data": "^4.0.0",
         "inquirer": "^8.2.4",
         "mysql2": "^2.3.3"
