--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.18.2",
+        "@faker-js/faker": "^7.2.0",
+        "benny": "^3.7.1",
         "eslint": "^8.17.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-config-recommended": "^4.1.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "prettier": "^2.6.2"
+        "prettier": "^2.6.2",
+        "rimraf": "^3.0.2"
     },
     "author": "",
     "license": "ISC",
