--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bin/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint services"
+    "lint": "npx eslint --max-warnings=0 --ext .tsx,.ts,.js,.jsx src/ --fix"
   },
   "bin": {
     "turing-auth0": "bin/index.js"
@@ -22,6 +22,10 @@
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.19.0",
     "prettier": "2.7.1"
   }
